--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -10,6 +10,7 @@ jobs:
     
     steps:
       - name: Set up Homebrew
+        id: set-up-homebrew
         uses: Homebrew/actions/setup-homebrew@master
 
       - name: Cache Homebrew Bundler RubyGems
